--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/mian.css">
-    <title>starbucks</title>
+    <title>Homepage | Starbucks</title>
 </head>
 <body>
 <header>
@@ -28,7 +28,7 @@
           </div>
           <div class="navbar-nav ms-auto">
             <div class="tu-local">
-              <a class="nav-link" href="#">Encontrá tu tienda</a>
+              <a class="nav-link" href="#"> <img class="location" src="./img/location.png" alt=""> Encontrá tu tienda</a>
             </div>
           </div>
         </div>
