--- a/index.html
+++ b/index.html
@@ -45,51 +45,76 @@
       </div>
     </div>
   </div>
-<section class="links">
-  <div class="conta-iner">
-    <div class="row">
-      <div class="col-2 sobre-nosotros">
-        <h3>Sobre nosotros</h3>
-        <a href="#">Nuestra historia</a>
-        <a href="#">Nuestra misión</a>
-        <a href="#">Nuestra cultura inclusiva <br> y valores</a>
-        <a href="#">Nuestro café</a>
-        <a href="#">Historias y novedades</a>
-        <a href="#">Comunicados oficiales</a>
+
+<footer>
+<div class="container">
+  <div class="row p-5 bg-white text-black">
+    <div class="col-xs-12 col-md-6 col-lg-2">
+      <p class="h5">Sobre nosotros</p>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Nuestra historia</a>
       </div>
-      <div class="col-2 sobre-nosotros">
-        <h3>Impacto Social</h3>
-        <a href="#">Planeta</a>
-        <a href="#">Personas</a>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Nuestra misión</a>
       </div>
-      <div class="col-2 sobre-nosotros">
-        <h3>Atención al cliente</h3>
-        <a href="#">Contacto</a>
-        <a href="#">Medios de pago</a>
-        <a href="#">Defensa al consumidor</a>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Nuestra cultura inclusiva <br> y valores</a>
       </div>
-      <div class="col-2 sobre-nosotros">
-        <h3>Experiencia <br> Starbucks</h3>
-        <a href="#">Formas de comprar</a>
-        <a href="#">Delivery</a>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Nuestro café</a>
+      </div>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Historias y novedades</a>
+      </div>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Comunicados oficiales</a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-2">
+      <p class="h5">Impacto social</p>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Planeta</a>
+      </div>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Personas</a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-2">
+      <p class="h5">Atención al cliente</p>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Contacto</a>
+      </div>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Medios de pago</a>
+      </div>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Defensa al consumidor</a>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-3">
+      <p class="h5">Experiencia <br> starbucks</p>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Formas de comprar</a>
+      </div>
+      <div class="mb-1">
+        <a class="text-decoration-none" href="#">Delivery</a>
       </div>
     </div>
   </div>
-</section>
-
-<footer>
-  <div class="footer-logos">
-    <a href=""><img src="./img/facebookdos.png" alt="Fcebook"></a>
-    <a href=""><img src="./img/instagram.png" alt="Instagram"></a>
-    <a href=""><img src="./img/linkedin.png" alt="LinkedIn"></a>
+  <div class="foooter">
+    <div class="footer-logos">
+      <a href=""><img src="./img/facebookdos.png" alt="Fcebook"></a>
+      <a href=""><img src="./img/instagram.png" alt="Instagram"></a>
+      <a href=""><img src="./img/linkedin.png" alt="LinkedIn"></a>
+    </div>
+    <div class="footer-links">
+      <p class="accesibilidad">Accesibilidad web | Aviso de privacidad | Condiciones de uso | Mapa del sitio</p>
+      <p class="company">Ⓒ 2023. Starbucks Coffee Company. Reservados todos los derechos</p>
+      <p class="uy">uy | prod | a1546dd934842fab9e1e92e5315d063d9f63f438 | 20/05/2023-07:06:46:587</p>
+    </div>  
   </div>
-  <div class="footer-links">
-    <p class="accesibilidad">Accesibilidad web | Aviso de privacidad | Condiciones de uso | Mapa del sitio</p>
-    <p class="company">Ⓒ 2023. Starbucks Coffee Company. Reservados todos los derechos</p>
-    <p class="uy">uy | prod | a1546dd934842fab9e1e92e5315d063d9f63f438 | 20/05/2023-07:06:46:587</p>
-  </div>
+</div>
 </footer>
-
 <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
