Commiteando otra vez

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="navbar-nav me-auto">
             <a class="nav-link" aria-current="page" href="#">MENÚ</a>
             <a class="nav-link" href="#">CAFÉ</a>
-            <a class="nav-link" href="#">EXPERIENCIA STARBUCKS</a>
+            <a class="nav-link" href="./pages/experienciastarbucks.html">EXPERIENCIA STARBUCKS</a>
           </div>
           <div class="navbar-nav ms-auto">
             <div class="tu-local">
