Sumandole algo del menu

--- a/pages/experienciastarbucks.html
+++ b/pages/experienciastarbucks.html
@@ -23,9 +23,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav me-auto">
-                <a class="nav-link" aria-current="page" href="#">MENÚ</a>
+                <a class="nav-link" aria-current="page" href="../pages/menu.html">MENÚ</a>
                 <a class="nav-link" href="#">CAFÉ</a>
-                <a class="nav-link" href="./pages/experienciastarbucks.html">EXPERIENCIA STARBUCKS</a>
+                <a class="nav-link" href="../pages/experienciastarbucks.html">EXPERIENCIA STARBUCKS</a>
               </div>
               <div class="navbar-nav ms-auto">
                 <div class="tu-local">
@@ -36,26 +36,6 @@
           </div>
         </nav>
       </header>
-      <!-- <div class="container">
-        <div class="row no-gutters">
-          <div class="col">
-            <img class="compras" src="../img/compras.png" alt="">
-          </div>
-          <div class="col text-block">
-            <h2>In store</h2>
-            <p>En nuestras tiendas te esperan nuestros baristas <br> capacitados para ofrecerte una bebida muy <br> especial. 
-                El ambiente cálido y los detalles de <br> nuestros productos elaborados artesanalmente <br> hacen que la experiencia sea única e inigualable.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">Columna 1</div>
-          <div class="col">Columna 2</div>
-        </div>
-        <div class="row">
-          <div class="col">Columna 1</div>
-          <div class="col">Columna 2</div>
-        </div>
-      </div> -->
       <div class="experiencia-starbucks">
         <h2>Experiencia Starbucks</h2>
       </div>
