--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav me-auto">
-            <a class="nav-link" aria-current="page" href="#">MENÚ</a>
+            <a class="nav-link" aria-current="page" href="./pages/menu.html">MENÚ</a>
             <a class="nav-link" href="#">CAFÉ</a>
             <a class="nav-link" href="./pages/experienciastarbucks.html">EXPERIENCIA STARBUCKS</a>
           </div>
