Arreglando el responsive

--- a/pages/experienciastarbucks.html
+++ b/pages/experienciastarbucks.html
@@ -149,8 +149,8 @@
               </div>
             </div>
           </div>
-          <div class="foooter">
-            <div class="footer-logos">
+          <div class="foooter border-top border-grey">
+            <div class="footer-logos pt-4">
               <a href=""><img src="../img/facebookdos.png" alt="Fcebook"></a>
               <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
               <a href=""><img src="../img/linkedin.png" alt="LinkedIn"></a>
