--- a/pages/menu.html
+++ b/pages/menu.html
@@ -38,8 +38,19 @@
 
 
     <div class="container">
+        <div class="border-bottom border-black pb-4">
+            <div class="disfrutalos">
+                <h2 class="fs-5">¡Disfrútalos!</h2>
+            </div>
+            <div class="bebidas-alimentos">
+                <h1 class="fs-2">Conoce nuestras bebidas y alimentos de <br> temporada</h1>
+            </div>
+        </div>
+        <div class="border-bottom border-black pt-4 pb-3">
+            <h2 class="fs-5">Bebidas</h2>
+        </div>
         <div class="row">
-          <div class="col">
+          <div class="col-sm-6 col-md-4 ">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -49,7 +60,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-6 col-md-4 ">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -59,7 +70,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-6 col-md-4 ">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -69,10 +80,7 @@
               </div>
             </div>
           </div>
-        </div>
-    
-        <div class="row">
-          <div class="col">
+          <div class="col-sm-6 col-md-4 ">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -82,7 +90,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-6 col-md-4 ">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -92,7 +100,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-6 col-md-4">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -102,10 +110,7 @@
               </div>
             </div>
           </div>
-        </div>
-    
-        <div class="row">
-          <div class="col-4">
+          <div class="col-sm-6 col-md-4">
             <div class="card">
               <div class="card-body">
                 <a href="#">
@@ -178,8 +183,8 @@
       </div>
     </div>
   </div>
-  <div class="foooter">
-    <div class="footer-logos">
+  <div class="foooter border-top border-grey">
+    <div class="footer-logos pt-4">
       <a href=""><img src="../img/facebookdos.png" alt="Fcebook"></a>
       <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
       <a href=""><img src="../img/linkedin.png" alt="LinkedIn"></a>
