--- a/pages/experienciastarbucks.html
+++ b/pages/experienciastarbucks.html
@@ -41,7 +41,7 @@
       </div>
       <div class="row">
         <div class="col-12 titulo-principal">
-          <h2 class="h2-principal">Para cada momento hay una forma de vivir la <br> Experiencia Starbucks como vos quieras.</h2>
+          <h2 class="h2-principal fs-4">Para cada momento hay una forma de vivir la <br> Experiencia Starbucks como vos quieras.</h2>
         </div>
       </div>
       <div class="container">
@@ -82,18 +82,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
     <footer>
         <div class="container">
           <div class="row p-5 bg-white text-black">
