--- a/pages/menu.html
+++ b/pages/menu.html
@@ -121,82 +121,138 @@
             </div>
           </div>
         </div>
-      </div>
+        <div class="border-bottom border-top border-black  pt-4 pb-3">
+            <h2 class="fs-5">Comidas</h2>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-4 ">
+              <div class="card">
+                <div class="card-body">
+                  <a href="#">
+                      <img src="../img/bakery.png" alt="Bakery">
+                  </a>
+                  <h1>Bakery</h1>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 ">
+              <div class="card">
+                <div class="card-body">
+                  <a href="#">
+                      <img src="../img/sanguche.png" alt="Snguche">
+                  </a>
+                  <h1>Sándwichs & preparados</h1>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 ">
+              <div class="card">
+                <div class="card-body">
+                  <a href="#">
+                      <img src="../img/snacks.png" alt="Snacks">
+                  </a>
+                  <h1>Snacks</h1>
+                </div>
+              </div>
+            </div>
+        </div>
 
-
-
-
-
-
-<footer>
-<div class="container">
-  <div class="row p-5 bg-white text-black">
-    <div class="col-xs-12 col-md-6 col-lg-2">
-      <p class="h5">Sobre nosotros</p>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Nuestra historia</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Nuestra misión</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Nuestra cultura inclusiva <br> y valores</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Nuestro café</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Historias y novedades</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Comunicados oficiales</a>
-      </div>
+        <div class="border-bottom border-top border-black  pt-4 pb-3">
+            <h2 class="fs-5">En casa</h2>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-4 ">
+              <div class="card">
+                <div class="card-body">
+                  <a href="#">
+                      <img src="../img/cafebolsa.png" alt="Café en granos">
+                  </a>
+                  <h1>Café en granos</h1>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4 ">
+              <div class="card">
+                <div class="card-body">
+                  <a href="#">
+                      <img src="../img/teenbolsa.png" alt="Té en bolsa">
+                  </a>
+                  <h1>Té</h1>
+                </div>
+              </div>
+            </div>
+        </div>
     </div>
-    <div class="col-xs-12 col-md-6 col-lg-2">
-      <p class="h5">Impacto social</p>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Planeta</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Personas</a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-6 col-lg-2">
-      <p class="h5">Atención al cliente</p>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Contacto</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Medios de pago</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Defensa al consumidor</a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-6 col-lg-3">
-      <p class="h5">Experiencia <br> starbucks</p>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Formas de comprar</a>
-      </div>
-      <div class="mb-1">
-        <a class="text-decoration-none" href="#">Delivery</a>
-      </div>
-    </div>
-  </div>
-  <div class="foooter border-top border-grey">
-    <div class="footer-logos pt-4">
-      <a href=""><img src="../img/facebookdos.png" alt="Fcebook"></a>
-      <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
-      <a href=""><img src="../img/linkedin.png" alt="LinkedIn"></a>
-    </div>
-    <div class="footer-links">
-      <p class="accesibilidad">Accesibilidad web | Aviso de privacidad | Condiciones de uso | Mapa del sitio</p>
-      <p class="company">Ⓒ 2023. Starbucks Coffee Company. Reservados todos los derechos</p>
-      <p class="uy">uy | prod | a1546dd934842fab9e1e92e5315d063d9f63f438 | 20/05/2023-07:06:46:587</p>
-    </div>  
-  </div>
-</div>
-</footer>
+
+      <footer>
+        <div class="container">
+          <div class="row p-5 bg-white text-black">
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <p class="h5">Sobre nosotros</p>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Nuestra historia</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Nuestra misión</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Nuestra cultura inclusiva <br> y valores</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Nuestro café</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Historias y novedades</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Comunicados oficiales</a>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <p class="h5">Impacto social</p>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Planeta</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Personas</a>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-2">
+              <p class="h5">Atención al cliente</p>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Contacto</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Medios de pago</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Defensa al consumidor</a>
+              </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3">
+              <p class="h5">Experiencia <br> starbucks</p>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Formas de comprar</a>
+              </div>
+              <div class="mb-1">
+                <a class="text-decoration-none" href="#">Delivery</a>
+              </div>
+            </div>
+          </div>
+          <div class="foooter border-top border-grey">
+            <div class="footer-logos pt-4">
+              <a href=""><img src="../img/facebookdos.png" alt="Fcebook"></a>
+              <a href=""><img src="../img/instagram.png" alt="Instagram"></a>
+              <a href=""><img src="../img/linkedin.png" alt="LinkedIn"></a>
+            </div>
+            <div class="footer-links">
+              <p class="accesibilidad">Accesibilidad web | Aviso de privacidad | Condiciones de uso | Mapa del sitio</p>
+              <p class="company">Ⓒ 2023. Starbucks Coffee Company. Reservados todos los derechos</p>
+              <p class="uy">uy | prod | a1546dd934842fab9e1e92e5315d063d9f63f438 | 20/05/2023-07:06:46:587</p>
+            </div>  
+          </div>
+        </div>
+    </footer>
 <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
